--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -3,33 +3,39 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9cfde09",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "from pathlib import Path\r\n",
     "import csv"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7c1fde98",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "csvpath = Path('../Pybank/budget_data.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ad7a1a2f",
-   "metadata": {},
+   "source": [
+    "with open (csvpath, 'r') as csvfile:\r\n",
+    "    #print(type(csvfile))\r\n",
+    "    csvreader = csv.reader(csvfile, delimiter = ',')\r\n",
+    "    #print(type(csvreader))\r\n",
+    "    csv_header = next(csvreader)\r\n",
+    "    #print(csv_header)\r\n",
+    "    for row in csvreader:\r\n",
+    "        print(row)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "<class '_io.TextIOWrapper'>\n",
       "<class '_csv.reader'>\n",
@@ -123,24 +129,14 @@
      ]
     }
    ],
-   "source": [
-    "with open (csvpath, 'r') as csvfile:\n",
-    "    print(type(csvfile))\n",
-    "    csvreader = csv.reader(csvfile, delimiter = ',')\n",
-    "    print(type(csvreader))\n",
-    "    csv_header = next(csvreader)\n",
-    "    print(csv_header)\n",
-    "    for row in csvreader:\n",
-    "        print(row)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f316ae-c52d-45e6-8b82-0d8ebeff1163",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
