--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -2,141 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "from pathlib import Path\r\n",
-    "import csv"
-   ],
+   "execution_count": 1,
+   "id": "fd832ad5",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#import modules\n",
+    "import csv\n",
+    "import os"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "csvpath = Path('../Pybank/budget_data.csv')"
-   ],
+   "execution_count": 2,
+   "id": "753c1b64",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#set path for file\n",
+    "csvpath = os.path.join('..','PyBank','budget_data.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "id": "372a2d46-ad9c-4ffc-9ee1-26e56152db26",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "with open (csvpath, 'r') as csvfile:\r\n",
-    "    #print(type(csvfile))\r\n",
-    "    csvreader = csv.reader(csvfile, delimiter = ',')\r\n",
-    "    #print(type(csvreader))\r\n",
-    "    csv_header = next(csvreader)\r\n",
-    "    #print(csv_header)\r\n",
-    "    for row in csvreader:\r\n",
-    "        print(row)"
-   ],
+    "#set the variables\n",
+    "\n",
+    "total_months = 0\n",
+    "total_revenue = 0\n",
+    "revenue = []\n",
+    "previous_revenue = 0\n",
+    "month_change = []\n",
+    "pnl_change_list = []\n",
+    "pnl_change = 0\n",
+    "pnl_average_change = 0\n",
+    "greatest_decrease = [\"\", 9999999]\n",
+    "greatest_increase = [\"\", 0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c463ba7b-8fce-4278-8708-eca0947e6621",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "<class '_io.TextIOWrapper'>\n",
-      "<class '_csv.reader'>\n",
-      "['Date', 'Profit/Losses']\n",
-      "['Jan-2010', '867884']\n",
-      "['Feb-2010', '984655']\n",
-      "['Mar-2010', '322013']\n",
-      "['Apr-2010', '-69417']\n",
-      "['May-2010', '310503']\n",
-      "['Jun-2010', '522857']\n",
-      "['Jul-2010', '1033096']\n",
-      "['Aug-2010', '604885']\n",
-      "['Sep-2010', '-216386']\n",
-      "['Oct-2010', '477532']\n",
-      "['Nov-2010', '893810']\n",
-      "['Dec-2010', '-80353']\n",
-      "['Jan-2011', '779806']\n",
-      "['Feb-2011', '-335203']\n",
-      "['Mar-2011', '697845']\n",
-      "['Apr-2011', '793163']\n",
-      "['May-2011', '485070']\n",
-      "['Jun-2011', '584122']\n",
-      "['Jul-2011', '62729']\n",
-      "['Aug-2011', '668179']\n",
-      "['Sep-2011', '899906']\n",
-      "['Oct-2011', '834719']\n",
-      "['Nov-2011', '132003']\n",
-      "['Dec-2011', '309978']\n",
-      "['Jan-2012', '-755566']\n",
-      "['Feb-2012', '1170593']\n",
-      "['Mar-2012', '252788']\n",
-      "['Apr-2012', '1151518']\n",
-      "['May-2012', '817256']\n",
-      "['Jun-2012', '570757']\n",
-      "['Jul-2012', '506702']\n",
-      "['Aug-2012', '-1022534']\n",
-      "['Sep-2012', '475062']\n",
-      "['Oct-2012', '779976']\n",
-      "['Nov-2012', '144175']\n",
-      "['Dec-2012', '542494']\n",
-      "['Jan-2013', '359333']\n",
-      "['Feb-2013', '321469']\n",
-      "['Mar-2013', '67780']\n",
-      "['Apr-2013', '471435']\n",
-      "['May-2013', '565603']\n",
-      "['Jun-2013', '872480']\n",
-      "['Jul-2013', '789480']\n",
-      "['Aug-2013', '999942']\n",
-      "['Sep-2013', '-1196225']\n",
-      "['Oct-2013', '268997']\n",
-      "['Nov-2013', '-687986']\n",
-      "['Dec-2013', '1150461']\n",
-      "['Jan-2014', '682458']\n",
-      "['Feb-2014', '617856']\n",
-      "['Mar-2014', '824098']\n",
-      "['Apr-2014', '581943']\n",
-      "['May-2014', '132864']\n",
-      "['Jun-2014', '448062']\n",
-      "['Jul-2014', '689161']\n",
-      "['Aug-2014', '800701']\n",
-      "['Sep-2014', '1166643']\n",
-      "['Oct-2014', '947333']\n",
-      "['Nov-2014', '578668']\n",
-      "['Dec-2014', '988505']\n",
-      "['Jan-2015', '1139715']\n",
-      "['Feb-2015', '1029471']\n",
-      "['Mar-2015', '687533']\n",
-      "['Apr-2015', '-524626']\n",
-      "['May-2015', '158620']\n",
-      "['Jun-2015', '87795']\n",
-      "['Jul-2015', '423389']\n",
-      "['Aug-2015', '840723']\n",
-      "['Sep-2015', '568529']\n",
-      "['Oct-2015', '332067']\n",
-      "['Nov-2015', '989499']\n",
-      "['Dec-2015', '778237']\n",
-      "['Jan-2016', '650000']\n",
-      "['Feb-2016', '-1100387']\n",
-      "['Mar-2016', '-174946']\n",
-      "['Apr-2016', '757143']\n",
-      "['May-2016', '445709']\n",
-      "['Jun-2016', '712961']\n",
-      "['Jul-2016', '-1163797']\n",
-      "['Aug-2016', '569899']\n",
-      "['Sep-2016', '768450']\n",
-      "['Oct-2016', '102685']\n",
-      "['Nov-2016', '795914']\n",
-      "['Dec-2016', '60988']\n",
-      "['Jan-2017', '138230']\n",
-      "['Feb-2017', '671099']\n"
+      "Financial Analysis\n",
+      "---------------------------------------------------------------\n",
+      "Total number of months included in the dataset: 86\n",
+      "The net total amount of Profit/Losses over the entire period: $38382578\n",
+      "The average of the changes in Profit/Losses over the entire period: $7803.48\n",
+      "Greatest increase in profits (date and amount) ovef the entire period: ('Feb-2012', 1926159)\n",
+      "Greatest decrease in losses (date and amount) over the entire period: ('Sep-2013', -2196167)\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "#open the csv file\n",
+    "with open(csvpath, 'r') as csvfile:\n",
+    "    reader = csv.reader(csvfile, delimiter=',')\n",
+    "    csvrow = next(reader)\n",
+    "\n",
+    "\n",
+    "    #loop through to find total months\n",
+    "    for row in reader:\n",
+    "\n",
+    "        #count the total of months\n",
+    "        total_months += 1\n",
+    "\n",
+    "        #calculate the total revenue over the entire period\n",
+    "        total_revenue += int(row[1])\n",
+    "\n",
+    "        #calculate the average change in revenue between months over the entire period\n",
+    "        pnl_change = int(row[1])- previous_revenue\n",
+    "        previous_revenue = int(row[1])\n",
+    "        pnl_change_list = pnl_change_list + [pnl_change]\n",
+    "        month_change = [month_change] + [row[0]]\n",
+    "        pnl_average_change = round(sum(pnl_change_list)/len(pnl_change_list),2)\n",
+    "       \n",
+    "\n",
+    "        #the greatest increase in revenue (date and amount) over the entire period\n",
+    "        if pnl_change > greatest_increase[1]:\n",
+    "            greatest_increase[1] = pnl_change\n",
+    "            greatest_increase[0] = row[0]\n",
+    "\n",
+    "        #the greatest decrease in revenue (date and amount) over the entire period\n",
+    "        if pnl_change < greatest_decrease[1]:\n",
+    "            greatest_decrease[1] = pnl_change\n",
+    "            greatest_decrease[0] = row[0]\n",
+    "            \n",
+    "\n",
+    "print(\"Financial Analysis\")\n",
+    "print(\"---------------------------------------------------------------\")\n",
+    "            \n",
+    "print(f\"Total number of months included in the dataset: {total_months}\")\n",
+    "print(f\"The net total amount of Profit/Losses over the entire period: ${total_revenue}\")\n",
+    "print(f\"The average of the changes in Profit/Losses over the entire period: ${pnl_average_change}\")\n",
+    "print(f\"Greatest increase in profits (date and amount) ovef the entire period: {greatest_increase[0], greatest_increase[1]}\")\n",
+    "print(f\"Greatest decrease in losses (date and amount) over the entire period: {greatest_decrease[0], greatest_decrease[1]}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "0b17c1c9-12fb-4cf2-b96b-dff505a655a0",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
